Complite Implement Django Messages & Django Authentication - Login, Registration & Logout

--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load humanize %}
+{% block title %} Car Inventory {% endblock %}
 {% block content %}
 
     <!-- Sub banner start -->
