--- a/templates/cars/search.html
+++ b/templates/cars/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load humanize %}
-
+{% block title %} Car Search Results {% endblock %}
 {% block content %}
 
 <!-- Banner start -->
