--- a/templates/cars/car_details.html
+++ b/templates/cars/car_details.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load humanize %}
+{% block title %} Car Details {% endblock %}
 {% block content %}
 <!-- Sub banner start -->
 <div class="sub-banner overview-bgi">
