--- a/templates/include/topbar.html
+++ b/templates/include/topbar.html
@@ -11,12 +11,22 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-5">
                 <ul class="top-social-media pull-right">
-                    <li>
-                        <a href="#" class="sign-in"><i class="fa fa-sign-in"></i> Login</a>
-                    </li>
-                    <li>
-                        <a href="#" class="sign-in"><i class="fa fa-user"></i> Register</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="{% url 'dashboard' %}" class="sign-in"><i class="fa fa-tachometer"></i> Dashboard</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'logout' %}" class="sign-in"><i class="fa fa-sign-out"></i> Logout</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="{% url 'login' %}" class="sign-out"><i class="fa fa-sign-in"></i> Login</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'registration' %}" class="sign-in"><i class="fa fa-user"></i> Register</a>
+                        </li>
+
+                    {% endif %}
                 </ul>
             </div>
         </div>
