--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
+{% block title %} About {% endblock %}
 {% block content %}
 
 <!-- Sub banner start -->
