--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load humanize %}
+{% block title %} Home {% endblock %}
 {% block content %}
 
 <!-- Banner start -->
