--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -11,7 +11,7 @@
             <h1>Dashboard</h1>
             <ul class="breadcrumbs">
                 <li><a href="/">Home</a></li>
-                <li class="active">Username</li>
+                <li class="active">{{ user.first_name }}</li>
             </ul>
         </div>
     </div>
@@ -23,43 +23,37 @@
 <div class="container mt-50 mb-50">
 {% include 'include/messages.html' %}
 	<div class="main-title" style="text-align:left !important;">
-            <h1>Welcome <span>User</span></h1>
+            <h1>Welcome <span>{{ user.first_name }}</span></h1>
             <p>Here are the cars that you have inquired about</p>
         </div>
-	<table class="table table-hover">
-	  <thead>
-		<tr>
-		  <th scope="col">#</th>
-		  <th scope="col">Car Name</th>
-		  <th scope="col">Location</th>
-		  <th scope="col">Price</th>
-		  <th scope="col">Action</th>
-		</tr>
-	  </thead>
-	  <tbody>
-		<tr>
-		  <th scope="row">1</th>
-		  <td>Lamborgini Huracan</td>
-		  <td>Austin</td>
-		  <td>$25000</td>
-		  <td><a href="#" class="btn btn-outline-dark">View Car</a></td>
-		</tr>
-		<tr>
-		  <th scope="row">2</th>
-		  <td>Lamborgini Huracan</td>
-		  <td>Austin</td>
-		  <td>$25000</td>
-		  <td><a href="#" class="btn btn-outline-dark">View Car</a></td>
-		</tr>
-		<tr>
-		  <th scope="row">3</th>
-		  <td>Lamborgini Huracan</td>
-		  <td>Austin</td>
-		  <td>$25000</td>
-		  <td><a href="#" class="btn btn-outline-dark">View Car</a></td>
-		</tr>
-	  </tbody>
-	</table>
+    {% if inquiry %}
+
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Car Name</th>
+              <th scope="col">Location</th>
+              <th scope="col">Action</th>
+            </tr>
+          </thead>
+        {% for inq in inquiry %}
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>{{ inq.car_title }}</td>
+              <td>{{ inq.city }}</td>
+              <td><a href="{% url 'car_details' inq.car_id %}" class="btn btn-outline-dark">View Car</a></td>
+            </tr>
+          </tbody>
+        {% endfor %}
+	    </table>
+
+
+        {% else %}
+        <h4>No inquiry</h4>
+    {% endif %} 
+
 </div>
 
 <!--   Dashboard End   -->
