--- a/templates/include/topbar.html
+++ b/templates/include/topbar.html
@@ -20,7 +20,7 @@
                         </li>
                     {% else %}
                         <li>
-                            <a href="{% url 'login' %}" class="sign-out"><i class="fa fa-sign-in"></i> Login</a>
+                            <a href="{% url 'login' %}" class="sign-in"><i class="fa fa-sign-in"></i> Login</a>
                         </li>
                         <li>
                             <a href="{% url 'registration' %}" class="sign-in"><i class="fa fa-user"></i> Register</a>
